<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".CreateNoteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_notes"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_save"
                android:background="@android:color/transparent"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentEnd="true"
                android:padding="4dp"
                android:contentDescription="@string/save_your_note_here"
                android:src="@drawable/ic_save">

            </ImageView>



        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/edit_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:padding="8dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="text"
        tools:ignore="TouchTargetSizeCheck"
        android:importantForAutofill="no">
S

    </EditText>

    <EditText
        android:id="@+id/edit_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_note_here"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        android:inputType="text|textMultiLine"
        android:importantForAutofill="no"/>



</LinearLayout>