<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp"

    android:id="@+id/notes_container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:padding="8dp"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:layout_alignParentStart="true"/>

            <ImageView
                android:id="@+id/img_pin"
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:layout_alignParentEnd="true">

            </ImageView>

        </RelativeLayout>

        <TextView
            android:id="@+id/txt_noteBody"
            android:textSize="14sp"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:maxLines="10"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:id="@+id/txt_noteDate"
            android:textSize="14sp"
            android:text="@string/dummydate"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:textColor="@color/grey"
            android:textStyle="normal"
            android:maxLines="10"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>



    </LinearLayout>

</androidx.cardview.widget.CardView>